# flow-check

./: .gitignore  LICENSE  README.md
api/go/: README.md  go.mod  main.go
api/go/info/: config.go  do.go  info.go
api/go/mail/: mail.go
conf/: demo.json
headless/go/: README.md  go.mod  go.sum  main.go
headless/go/info/: check.go  config.go  do.go  info.go  page.go  status.go
headless/go/mail/: mail.go
headless/rust/: Cargo.toml  README.md
headless/rust/src/: main.rs
