[package]
name = "headles-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", branch = "master", features = ["fetch"]}
anyhow = '1'

lettre = "0.10"
serde_json = "1.0"
serde = "*"
